# fyphandbook-rag

./: .gitignore  README.md  app.py  ask.py  docs.md  ingest.py  main.py  plan.md  prompts.txt  pyproject.toml
report/: report.md
scripts/: evaluate.py  make_report_pdf.py
src/fyp_rag/: __init__.py  bm25_store.py  chunker.py  config.py  embedder.py  llm.py  logger.py  pdf_loader.py  pipeline.py  prompt.py  reranker.py  retriever.py  vector_store.py
